--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,17 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.4.4"
+rocket_codegen = "0.4.4"
+diesel = { version = "2.0.2", features = ["postgres"]}
+dotenv = "0.9.0"
+r2d2-diesel = "1.0.0"
+r2d2 = "0.8"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+custom_derive = "0.1.7"
+
+[dependencies.rocket_contrib]
+version = "*"
+default-features = false
+features = ["json"]
