--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-DATABASE_URL=postgres://username:password@localhost:port/diesel_demo
+DATABASE_URL=postgres://username:password@localhost:5432/diesel_demo
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_DB=diesel_demo
+POSTGRES_USER=username
+POSTGRES_PASSWORD=password
