--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,8 @@
 [package]
-name = "rest-api-rust"
+name = "toml"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.4.4"
-rocket_codegen = "0.4.4"
-diesel = { version = "2.0.2", features = ["postgres"]}
-dotenv = "0.9.0"
-r2d2-diesel = "1.0.0"
-r2d2 = "0.8"
-serde = "1.0"
-serde_derive = "1.0"
-serde_json = "1.0"
-custom_derive = "0.1.7"
-
-[dependencies.rocket_contrib]
-version = "*"
-default-features = false
-features = ["json"]
