--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "2.0"
+actix-rt = "1.0"
+serde = "1.0.114"
+simple_logging = "2.0.2"
+log = "0.4.8"
+pam = "0.7.0"
+nix = "0.17.0"
+libc = "0.2"
